<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fees_and_commissions.FeesAndCommissionsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/chaplain_profile_second_step_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:text="@string/fees_and_commissions_activity_title"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/fees_and_commissions_activity_price"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fees_and_commissions_activity_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/fees_and_commissions_activity_price_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/fees_and_commissions_activity_commission"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fees_and_commissions_activity_commission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/fees_and_commissions_activity_commission_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView83"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/fees_and_commissions_activity_cancel_fine"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fees_and_commissions_activity_cancel_fine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/fees_and_commissions_activity_cancel_fine_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView84"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/fees_and_commissions_activity_cancel_last_date_patient"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fees_and_commissions_activity_cancel_last_date_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/fees_and_commissions_activity_cancel_last_date_patient_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView85"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/fees_and_commissions_activity_cancel_last_date_chaplain"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fees_and_commissions_activity_cancel_last_date_chaplain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/fees_and_commissions_activity_cancel_last_date_chaplain_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView86"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/fees_and_commissions_activity_edit_last_date"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fees_and_commissions_activity_edit_last_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/fees_and_commissions_activity_edit_last_date_hint"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/fees_and_commissions_activity_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/chaplain_bank_account_info_edit_save_button_before_click"
                    android:textColor="@color/design_default_color_background" />

                <ProgressBar
                    android:id="@+id/fees_and_commissions_activity_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>